animation and styling of landingpage

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -18,15 +18,17 @@
 <div class="row">
   <div class="small-12 large-8 small-centered columns">
     <div id="svb-header-wrapper">
-      <h1 class="tk-ff-enzo-web shadow10">SVBTIL</h2>
-      <h4 class="tk-ff-enzo-web">(12.07.2014)</h4>
-      <p class="tk-ff-enzo-web">&gt; 10 DJs | draussen | drinnen | umsonst<p>
+      <h1 class="tk-ff-enzo-web">SVBTIL</h2>
     </div>
   </div>
   <div class="small-11 medium-9 large-8 small-centered columns">
-    <input type="email" id="svb-input-email" placeholder="tilda@swinton.com" />
-    <div class="small-9 medium-7 large-6 small-centered columns">
-      <a href="#" class="button svb-button large">Ich will dabei sein!</a>
+    <div id="svb-content-wrapper">
+      <h4 class="tk-ff-enzo-web">(12.07.2014)</h4>
+      <p class="tk-ff-enzo-web">&gt; 10 DJs | draussen | drinnen | umsonst<p>
+      <input type="email" id="svb-input-email" placeholder="tilda@swinton.com" />
+      <div class="small-9 medium-7 large-6 small-centered columns">
+        <a href="#" class="button svb-button large">Ich will dabei sein!</a>
+      </div>
     </div>
   </div>
 </div>
