add cors request

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -22,13 +22,18 @@
     </div>
   </div>
   <div class="small-11 medium-9 large-8 small-centered columns">
-    <div id="svb-content-wrapper">
+    <div id="svb-landing-wrapper">
       <h4 class="tk-ff-enzo-web">(12.07.2014)</h4>
       <p class="tk-ff-enzo-web">&gt; 10 DJs | draussen | drinnen | umsonst<p>
       <input type="email" id="svb-input-email" placeholder="tilda@swinton.com" />
       <div class="small-9 medium-7 large-6 small-centered columns">
         <a href="#" class="button svb-button large">Ich will dabei sein!</a>
       </div>
+    </div>
+    <div id="svb-invite-wrapper">
+      <h4 class="tk-ff-enzo-web">(12.07.2014)</h4>
+      <p class="tk-ff-enzo-web">&gt; 10 DJs | draussen | drinnen | umsonst<p>
+      <h2>Hallo, {{ name }}!</h2>
     </div>
   </div>
 </div>
@@ -42,6 +47,6 @@
 <script src="main.js"></script>
 
 <!-- livereload -->
-<script type="text/javascript">document.write('<script src="' + (location.protocol || 'http:') + '//' + (location.hostname || 'localhost') + ':35729/livereload.js?snipver=1" type="text/javascript"><\/script>')</script><!-- /livereload -->
+<script type="text/javascript">document.write('<script src="' + (location.protocol || 'http:') + '//' + (location.hostname || 'localhost') + ':35739/livereload.js?snipver=1" type="text/javascript"><\/script>')</script><!-- /livereload -->
 </body>
 </html>
