--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>SVBTIL</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="animate-css/animate.css">
   <script type="text/javascript" src="//use.typekit.net/rov0tdn.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
@@ -29,10 +28,12 @@
     <h4 class="tk-ff-enzo-web">(12.07.2014)</h4>
     <h4 class="tk-ff-enzo-web svb-small">&gt; 10 DJs | draussen | drinnen | umsonst</h4>
     <div class="svb-landing-content-wrapper">
-      <input type="email" id="svb-input-email" placeholder="tilda@swinton.com" />
-      <div class="small-9 medium-7 large-6 small-centered columns">
-        <a href="#" class="button svb-button large">Ich will dabei sein!</a>
-      </div>
+      <form action="http://svbtil.us8.list-manage.com/subscribe/post?u=e702aa94901313486fbb9ff1b&amp;id=14ded2989e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+        <input type="email" value="" name="EMAIL" class="required email" id="svb-input-email" placeholder="tilda@swinton.com" required>
+        <div class="small-9 medium-7 large-6 small-centered columns">
+          <input type="submit" class="button svb-button large" value="Ich will dabei sein!"></input>
+        </div>
+      </form>
     </div>
   </div>
 </script>
@@ -69,15 +70,13 @@
 </script>
 
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
-
-<script src="jquery/dist/jquery.js"></script>
-<script src="handlebars/handlebars.js"></script>
-<script src="trianglify/trianglify.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/trianglify/0.1.2/trianglify.min.js"></script>
 
 <script src="main.js"></script>
 
-<!-- livereload -->
-<script type="text/javascript">document.write('<script src="' + (location.protocol || 'http:') + '//' + (location.hostname || 'localhost') + ':35739/livereload.js?snipver=1" type="text/javascript"><\/script>')</script><!-- /livereload -->
+<!-- livereload --><script type="text/javascript">document.write('<script src="' + (location.protocol || 'http:') + '//' + (location.hostname || 'localhost') + ':35739/livereload.js?snipver=1" type="text/javascript"><\/script>')</script><!-- /livereload -->
 </body>
 </html>
