--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -4986,7 +4986,7 @@ p {
 :-ms-input-placeholder {
   color: rgba(28, 9, 104, 0.2); }
 
-a.svb-button {
+a.svb-button, input.svb-button {
   font-family: 'Source Sans Pro', sans-serif;
   color: #1c0968;
   border: 1px solid #1c0968;
@@ -4999,7 +4999,7 @@ a.svb-button {
   font-weight: 200;
   text-align: center;
   width: 100%; }
-  a.svb-button:hover {
+  a.svb-button:hover, input.svb-button:hover {
     color: #1c0968;
     background-color: rgba(69, 67, 70, 0.3); }
 
@@ -5069,3 +5069,64 @@ a.svb-button {
 
   to {
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7), 0px 0px 12px rgba(0, 0, 0, 0.9); } }
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+.animated.infinite {
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite; }
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+
+  50% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1); } }
+
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1); }
+
+  50% {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1); }
+
+  100% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1); } }
+
+.pulse {
+  -webkit-animation-name: pulse;
+  animation-name: pulse; }
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn; }
