--- a/src/app/index.html
+++ b/src/app/index.html
@@ -26,7 +26,7 @@
 <script id="tmpl-svb-landing" type="text/x-handlebars-template">
   <div id="svb-landing-wrapper">
     <h4 class="tk-ff-enzo-web">(12.07.2014)</h4>
-    <h4 class="tk-ff-enzo-web svb-small">&gt; 10 DJs | draussen | drinnen | umsonst</h4>
+    <h4 class="tk-ff-enzo-web svb-small">6 DJs | draussen | drinnen | umsonst</h4>
     <div class="svb-landing-content-wrapper">
       <form action="http://svbtil.us8.list-manage.com/subscribe/post?u=e702aa94901313486fbb9ff1b&amp;id=14ded2989e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
         <input type="email" value="" name="EMAIL" class="required email" id="svb-input-email" placeholder="tilda@swinton.com" required>
@@ -41,7 +41,7 @@
 <script id="tmpl-svb-invite" type="text/x-handlebars-template">
   <div id="svb-invite-wrapper">
     <h4 class="tk-ff-enzo-web">(12.07.2014)</h4>
-    <h4 class="tk-ff-enzo-web svb-small">&gt; 10 DJs | <span class="attendeeCount"></span> Gäste | draussen | drinnen | umsonst</h4>
+    <h4 class="tk-ff-enzo-web svb-small">6 DJs | <span class="attendeeCount"></span> Gäste | draussen | drinnen | umsonst</h4>
     <h2>Tag, {{ firstName }}!</h2>
     <p>Du bist eingeladen zum SVBTIL Geburtstags-Spezial! Bitte gib Deine eMail-Adresse ein, um rechtzeitig Infos zu Location und genauer Startzeit zu bekommen.</p>
     <div id="attendeeWrapper">
