--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -4875,6 +4875,24 @@ p {
 #submitBtn {
   display: none; }
 
+.input-wrapper {
+  position: relative; }
+
+#fbButton {
+  height: 20px;
+  position: absolute;
+  bottom: 4px;
+  right: 2px;
+  z-index: 1;
+  cursor: pointer;
+  transition: filter 2s; }
+  #fbButton:hover {
+    -webkit-filter: blur(1px);
+    -moz-filter: blur(1px);
+    -ms-filter: blur(1px);
+    -o-filter: blur(1px);
+    filter: blur(1px); }
+
 .svb-background-canvas {
   height: 100%;
   width: 100%;
